# AnilistScores

./: Cargo.toml
src/: main.rs
